fix(swaync): fix broken CSS that accidentally made all notifications transparent

--- a/modules/home/swaync/style.css
+++ b/modules/home/swaync/style.css
@@ -136,11 +136,11 @@ label {
 }
 
 .notification-group {
-    all: unset;
     border: none;
-    opacity: 0;
-    padding: 0px;
+    opacity: 1;
+    padding: 0;
     box-shadow: none;
+    background: transparent;
 }
 
 .notification-group>box {
